улучшил сайты, пока на разработке особо не рассматривай тот факт что они разнообразны еще в тесте можно сказать

--- a/website/seller.html
+++ b/website/seller.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NEW OBSHINA</title>
+    <title>INVENTORY</title>
+    <link rel="stylesheet" href="seller.css">
 </head>
 <body>
-    
+    <div class="lots_sell">
+    <h1>JDM-Лоты на продажу</h1>
+</div>
 </body>
 </html>
