--- a/website/web.html
+++ b/website/web.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main site</title>
+    <link rel="stylesheet" href="web.css">
 </head>
 <body>
-    <h1>Project is not retarted</h1>
-    
+
+    <h1>Market Place JDM-OBSHINA</h1>
+    <div class="button-sell">
+    <a href="seller.html">
+        <button class="button-50" role="button">Sell a car</button>
+      </a>
+    </div>
 </body>
 </html>
