--- a/website/buyer.html
+++ b/website/buyer.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NEW OBSHINA</title>
+    <title>Market</title>
+    <link rel="stylesheet" href="buyer.css">
 </head>
 <body>
-    
+    <div class="markettext">
+
+        <h1>Market</h1>
+    </div>
 </body>
 </html>
