закинул то что забыл

--- a/website/web.html
+++ b/website/web.html
@@ -9,10 +9,30 @@
 <body>
 
     <h1>Market Place JDM-OBSHINA</h1>
+<div class="introdctuion">
+ <P><br>This market was created for posting and purchasing old JDM-class cars.<br> Here you can buy from ordinary Japanese cars to good German racing cars.<br>
+    Created
+    front-end developer: <u> Piskorsky</u>
+    and Back-end Developer: <u>Garda</u>
+</div>
+
+
+
+
     <div class="button-sell">
     <a href="seller.html">
         <button class="button-50" role="button">Sell a car</button>
       </a>
     </div>
+    <div class="button-buy">
+        <a href="buyer.html">
+            <button class="button-51" role="button">Buy a car</button>
+          </a>
+        </div>
+        <div class="container">
+            <div class="rectangle-1"></div>  
+          </div>
+
+
 </body>
 </html>
