новая стилизация сайта

--- a/website/web.html
+++ b/website/web.html
@@ -16,9 +16,6 @@
     and Back-end Developer: <u>Garda</u>
 </div>
 
-
-
-
     <div class="button-sell">
     <a href="seller.html">
         <button class="button-50" role="button">Sell a car</button>
@@ -32,7 +29,26 @@
         <div class="container">
             <div class="rectangle-1"></div>  
           </div>
+          <div class="container1">
+            <div class="rectangle-2"></div>  
+          </div>
+          <div class="mainimage">
+          <img 
+          src="2cdda73588f59114729895aec0bdac49.jpg"
+          width="600"
+          height="600"
+          />
+        </div>
 
-
+        <div class="gardatext">
+          <p>Back-end Developer:</p> 
+          <a href="https://github.com/Gardabtw">Garda</a>
+      </div>
+      
+      <div class="pisktext">
+          <p>Front-end Developer:</p> 
+          <a href="https://github.com/piskorsky">Piskorsky</a>
+      </div>
+      
 </body>
 </html>
