--- a/website/web.html
+++ b/website/web.html
@@ -42,13 +42,19 @@
 
         <div class="gardatext">
           <p>Back-end Developer:</p> 
-          <a href="https://github.com/Gardabtw">Garda</a>
+          <a href="https://github.com/Gardabtw"target="_blank" >Garda</a>
       </div>
       
       <div class="pisktext">
           <p>Front-end Developer:</p> 
-          <a href="https://github.com/piskorsky">Piskorsky</a>
+          <a href="https://github.com/piskorsky"target="_blank" >Piskorsky</a>
       </div>
-      
+      <div class="registtext">
+        <a href="register.html">Registration</a>
+      </div>
+      <div class="signup">
+        <a href="sign.html">Sign up</a>
+
+      </div>
 </body>
 </html>
