--- a/website/register.html
+++ b/website/register.html
@@ -3,10 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="registre.css">
+    <link rel="stylesheet" href="register.css">
     <title>Registration account</title>
 </head>
 <body>
-    <h1>Registration site</h1>
+    <h1>Registration Site</h1>
+    <form action="submit_registration.php" method="POST" class="registration-form">
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" placeholder="Enter your username" required>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" placeholder="Enter your password" required>
+
+        <button type="submit">Register</button>
+    </form>
+    <div class="container">
+        <div class="rectangle-1"></div>  
+      </div>
+      <div class="container1">
+        <div class="rectangle-2"></div>  
+      </div>
 </body>
 </html>
