Улучшил регистр и сигн

--- a/website/register.html
+++ b/website/register.html
@@ -7,20 +7,28 @@
     <title>Registration account</title>
 </head>
 <body>
-    <h1>Registration Site</h1>
+    <div class="mainhref">
+        <a href="web.html" class="mainhref">Main</a>
+</div>
+  </div class="xtx">
+    <h1>Registration</h1>
+  </div>
     <form action="submit_registration.php" method="POST" class="registration-form">
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" placeholder="Enter your username" required>
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" placeholder="Enter your password" required>
-
+        <div class="signtext">
+            Have account? 
+            <a href="sign.html" class="hrefsign">Sign up</a>
+        </div>
         <button type="submit">Register</button>
     </form>
     <div class="container">
         <div class="rectangle-1"></div>  
-      </div>
-      <div class="container1">
+    </div>
+    <div class="container1">
         <div class="rectangle-2"></div>  
-      </div>
+    </div>
 </body>
 </html>
